got backend working pretty well
